<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="nl.tue.dbsu10.group6.group6.activity.AddActivity">

    <EditText
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtName" android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent" android:hint="@string/input_name"
            app:layout_constraintHorizontal_bias="0.142" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <Spinner
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/spinOutput3" android:entries="@array/output_array"
            android:layout_marginTop="9dp" app:layout_constraintTop_toBottomOf="@+id/spinOutput2"
            android:layout_marginLeft="24dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <Spinner
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/spinOutput2" android:entries="@array/output_array"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/spinOutput1"
            android:layout_marginRight="24dp" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="24dp" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Spinner
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/spinOutput1" android:entries="@array/output_array"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginLeft="24dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.0"
    />
    <Spinner
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/spinInput" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent" android:entries="@array/input_array"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtName" android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
            android:text="@string/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/spinInput" android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
            android:text="@string/add"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:id="@+id/button" android:onClick="add"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp" app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="128dp"
            android:layout_height="48dp" android:id="@+id/button2"
            android:onClick="cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toRightOf="@+id/button"
            android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/cmd_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginLeft="24dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>
